deploy/orders-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders
spec:
  selector:
    app: orders
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3002
  type: ClusterIP
